--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.3.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mysql2": "^3.7.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.9.2",
     "nodemon": "^3.0.3"
   }
 }
